<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wisata_poster"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@color/colorSmooth"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/wisata_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/wisata_lokasi_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/lokasi"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/wisata_lokasi_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lokasi"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/wisata_synopsis_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/deskripsi"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wisata_synopsis_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:justificationMode="inter_word"
            android:text="@string/deskripsi"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</ScrollView>