<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorPrimary"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/app_img"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/app_img"
        app:layout_constraintTop_toTopOf="@+id/app_img"
        app:layout_constraintVertical_bias="0.344" />

    <ImageView
        android:id="@+id/app_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_train_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/menu"
        android:backgroundTint="@color/colorSmooth"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <TextView
        android:id="@+id/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/menu"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menu_fab"
        app:layout_constraintEnd_toStartOf="@+id/menu_fab"
        app:layout_constraintTop_toTopOf="@+id/menu_fab"
        app:layout_constraintVertical_bias="0.527"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/wisata_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/wisata"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/menu_fab"
        app:layout_constraintEnd_toEndOf="@+id/menu_fab"
        app:layout_constraintStart_toStartOf="@+id/menu_fab"
        app:srcCompat="@drawable/ic_baseline_time_to_leave_24" />

    <TextView
        android:id="@+id/wisata_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/wisata"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/menu_text"
        app:layout_constraintEnd_toEndOf="@+id/menu_text"
        app:layout_constraintEnd_toStartOf="@+id/wisata_fab"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="@+id/menu_text"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/olahraga_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/olahraga"
        android:text="@string/olahraga"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/wisata_fab"
        app:layout_constraintEnd_toEndOf="@+id/wisata_fab"
        app:layout_constraintStart_toStartOf="@+id/wisata_fab"
        app:srcCompat="@drawable/ic_baseline_sports_handball_24" />

    <TextView
        android:id="@+id/olahraga_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/olahraga"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/wisata_text"
        app:layout_constraintEnd_toEndOf="@+id/wisata_text"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="@+id/wisata_text"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>
