<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".BiodataDua">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.004">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_founder"
                tools:ignore="ContentDescription" />


        </FrameLayout>

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/name_founder"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile2"
            app:layout_constraintStart_toStartOf="@+id/profile2"
            app:layout_constraintTop_toBottomOf="@+id/profile2" />

        <TextView
            android:id="@+id/email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/name2"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="@+id/name2"
            app:layout_constraintTop_toBottomOf="@+id/name2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile2"
            android:layout_width="159dp"
            android:layout_height="134dp"
            android:layout_marginTop="160dp"
            android:src="@drawable/founder2"
            app:civ_border_color="@color/colorBlack"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/frameLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.009"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email2"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biodata"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:textSize="13sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
